--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+#Plugins
+/[Aa]ssets/Plugins/GUIPack-Clean&Minimalist
+/[Aa]ssets/Plugins/Demigiant
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
